/*
Copyright 2016 The Kubernetes Authors All rights reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/


// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = 'proto2';

package k8s.io.kubernetes.pkg.apis.catalog.v1alpha1;

import "k8s.io/kubernetes/pkg/api/resource/generated.proto";
import "k8s.io/kubernetes/pkg/api/unversioned/generated.proto";
import "k8s.io/kubernetes/pkg/api/v1/generated.proto";
import "k8s.io/kubernetes/pkg/util/intstr/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "v1alpha1";

message Catalog {
  optional k8s.io.kubernetes.pkg.api.v1.ObjectMeta metadata = 1;
}

message CatalogEntry {
  optional k8s.io.kubernetes.pkg.api.v1.ObjectMeta metadata = 1;

  optional k8s.io.kubernetes.pkg.api.v1.LocalObjectReference catalog = 2;

  optional string description = 3;

  optional k8s.io.kubernetes.pkg.api.v1.ObjectReference reference = 4;

  map<string, string> data = 5;
}

message CatalogEntryClaim {
  optional k8s.io.kubernetes.pkg.api.v1.ObjectMeta metadata = 1;

  optional CatalogEntryClaimSpec spec = 2;

  optional CatalogEntryClaimStatus status = 3;
}

message CatalogEntryClaimList {
  optional k8s.io.kubernetes.pkg.api.unversioned.ListMeta metadata = 1;

  repeated CatalogEntryClaim items = 2;
}

message CatalogEntryClaimSpec {
  optional string catalog = 1;

  optional string entry = 2;
}

message CatalogEntryClaimStatus {
  optional string state = 1;

  repeated k8s.io.kubernetes.pkg.api.v1.ObjectReference provisionedItems = 2;
}

message CatalogEntryList {
  optional k8s.io.kubernetes.pkg.api.unversioned.ListMeta metadata = 1;

  repeated CatalogEntry items = 2;
}

message CatalogList {
  optional k8s.io.kubernetes.pkg.api.unversioned.ListMeta metadata = 1;

  repeated Catalog items = 2;
}

